; ModuleID = '/home/carl/AnghaBench/git/extr_grep.c_compile_grep_patterns.c'
source_filename = "/home/carl/AnghaBench/git/extr_grep.c_compile_grep_patterns.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grep_opt = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @compile_grep_patterns(%struct.grep_opt* %0) #0 {
  %2 = alloca %struct.grep_opt*, align 8
  store %struct.grep_opt* %0, %struct.grep_opt** %2, align 8
  %3 = load %struct.grep_opt*, %struct.grep_opt** %2, align 8
  %4 = call i32 @compile_grep_patterns_real(%struct.grep_opt* %3)
  %5 = load %struct.grep_opt*, %struct.grep_opt** %2, align 8
  %6 = getelementptr inbounds %struct.grep_opt, %struct.grep_opt* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load %struct.grep_opt*, %struct.grep_opt** %2, align 8
  %11 = call i32 @dump_grep_expression(%struct.grep_opt* %10)
  br label %12

12:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @compile_grep_patterns_real(%struct.grep_opt*) #1

declare dso_local i32 @dump_grep_expression(%struct.grep_opt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
